err/zwdlib.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/zwdlib'...
Compiling './lib/python3.5/site-packages/zwdlib/agent.py'...
***   File "./lib/python3.5/site-packages/zwdlib/agent.py", line 5244
    print x
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zwdlib/agent_lite.py'...
***   File "./lib/python3.5/site-packages/zwdlib/agent_lite.py", line 155
    print pick_one_agent()
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zwdlib/chinaz_words.py'...
***   File "./lib/python3.5/site-packages/zwdlib/chinaz_words.py", line 43
    print x
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zwdlib/configer.py'...
***   File "./lib/python3.5/site-packages/zwdlib/configer.py", line 48
    raise IOError, self.filename
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zwdlib/etao.py'...
***   File "./lib/python3.5/site-packages/zwdlib/etao.py", line 46
    print slot.find('a.title').text().replace('\n',' '),
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zwdlib/longtail.py'...
***   File "./lib/python3.5/site-packages/zwdlib/longtail.py", line 25
    print "could not find element"
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/zwdlib/pysvm'...
Compiling './lib/python3.5/site-packages/zwdlib/pysvm/tool_pysvm.py'...
***   File "./lib/python3.5/site-packages/zwdlib/pysvm/tool_pysvm.py", line 1177
    print s
          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zwdlib/pysvm/tool_svm.py'...
***   File "./lib/python3.5/site-packages/zwdlib/pysvm/tool_svm.py", line 103
    print svm_model
                  ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zwdlib/rectangle.py'...
***   File "./lib/python3.5/site-packages/zwdlib/rectangle.py", line 274
    print doctest.testmod(verbose=False, report=True)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zwdlib/tool_db.py'...
***   File "./lib/python3.5/site-packages/zwdlib/tool_db.py", line 138
    raise NoSuchFieldError, 'no such field:%s' % k
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zwdlib/tool_email.py'...
***   File "./lib/python3.5/site-packages/zwdlib/tool_email.py", line 84
    print self.email_host
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/zwdlib/tool_env.py'...
***   File "./lib/python3.5/site-packages/zwdlib/tool_env.py", line 25
    raise ValueError, "this function is corrupted"
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zwdlib/tool_html.py'...
***   File "./lib/python3.5/site-packages/zwdlib/tool_html.py", line 338
    print doctest.testmod(verbose=False, report=True)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zwdlib/tool_keyword.py'...
***   File "./lib/python3.5/site-packages/zwdlib/tool_keyword.py", line 67
    print doctest.testmod(verbose=False, report=True)
                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/zwdlib/tool_svm.py'...
***   File "./lib/python3.5/site-packages/zwdlib/tool_svm.py", line 28
    raise ValueError, 'not implemented'
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/zwdlib-0.0.3.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
